# WeatherFetch

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: ASCII.yaml  arts.json  arts.yaml  configmanager.rs  main.rs  parser.rs  shared.rs  weather.yaml
src/WeatherFetch-0.0.4/: README.md
src/WeatherFetch-0.0.4/src/: arts.yaml  main.rs
