[package]
name = "wfetch"
version = "0.0.1"
edition = "2021"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml       = "0.7"
clap       = { version = "4.4", features = ["derive"] }
reqwest    = { version = "0.11", features = ["json"] }
tokio      = { version = "1.0", features = ["full"] }
chrono     = "0.4"
termimage  = "1.2.2"
clap_derive = "4.5.49"
