[package]
name        = "WeatherFetch"
version     = "0.0.2"
edition     = "2021"
categories  = ["command-line-utilities"]
authors     = ["namilsk <namilsk@namilsk.tech>"]
license     = "MIT"
description = "Fastfetch but for weather" 
repository  = "https://github.com/Nam4ik/WeatherFetch" # "https://git.namilsk.tech/wfetch.git" 

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
toml         = "0.7"
clap         = { version = "4.4", features = ["derive"] }
reqwest      = { version = "0.11", features = ["json"] }
tokio        = { version = "1.0", features = ["full"] }
clap_derive  = "4.5.49"
serde_yml    = "0.0.12"
termimage    = "1.2.2"

[[bin]]
name = "wfetch"
path = "src/main.rs" 

[profile.release]
strip = true 
lto = "fat" 
codegen-units = 1
